// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`[EN] archive-preview (encrypted file) 1`] = `
<div
  class="encrypted"
>
  <div
    class="embedActions"
  >
    <lego-components_button
      classname="backButton"
      iconleft="className => /*#__PURE__*/_react.default.createElement(_resourceIcon.default, {
  type: \\"dir_back\\",
  cls: className
})"
      onclick="function () { [native code] }"
      size="m"
      view="clear"
    >
      <span>
        Back
      </span>
    </lego-components_button>
  </div>
  <div
    class="encryptedCentered"
  >
    <span>
      This archive is password-protected.
To view it, please save it on your computer.
    </span>
  </div>
</div>
`;

exports[`[EN] archive-preview (no selected file) 1`] = `
<div
  class="tip"
>
  <span>
    Now you can view and
extract individual files from the archive
  </span>
</div>
`;

exports[`[RU] archive-preview (encrypted file) 1`] = `
<div
  class="encrypted"
>
  <div
    class="embedActions"
  >
    <lego-components_button
      classname="backButton"
      iconleft="className => /*#__PURE__*/_react.default.createElement(_resourceIcon.default, {
  type: \\"dir_back\\",
  cls: className
})"
      onclick="function () { [native code] }"
      size="m"
      view="clear"
    >
      <span>
        Назад
      </span>
    </lego-components_button>
  </div>
  <div
    class="encryptedCentered"
  >
    <span>
      Архив защищен паролем.
Для просмотра сохраните архив на компьютер.
    </span>
  </div>
</div>
`;

exports[`[RU] archive-preview (no selected file) 1`] = `
<div
  class="tip"
>
  <span>
    Теперь можно просматривать
и извлекать отдельные файлы из архива
  </span>
</div>
`;

exports[`[TR] archive-preview (encrypted file) 1`] = `
<div
  class="encrypted"
>
  <div
    class="embedActions"
  >
    <lego-components_button
      classname="backButton"
      iconleft="className => /*#__PURE__*/_react.default.createElement(_resourceIcon.default, {
  type: \\"dir_back\\",
  cls: className
})"
      onclick="function () { [native code] }"
      size="m"
      view="clear"
    >
      <span>
        Geri
      </span>
    </lego-components_button>
  </div>
  <div
    class="encryptedCentered"
  >
    <span>
      Arşiv şifreyle korunuyor.
Arşivi görüntülemek için bilgisayarınıza indirin.
    </span>
  </div>
</div>
`;

exports[`[TR] archive-preview (no selected file) 1`] = `
<div
  class="tip"
>
  <span>
    Artık arşivdeki dosyaları tek tek görüntüleyebilir 
ve arşivden çıkarabilirsiniz
  </span>
</div>
`;

exports[`[UK] archive-preview (encrypted file) 1`] = `
<div
  class="encrypted"
>
  <div
    class="embedActions"
  >
    <lego-components_button
      classname="backButton"
      iconleft="className => /*#__PURE__*/_react.default.createElement(_resourceIcon.default, {
  type: \\"dir_back\\",
  cls: className
})"
      onclick="function () { [native code] }"
      size="m"
      view="clear"
    >
      <span>
        Назад
      </span>
    </lego-components_button>
  </div>
  <div
    class="encryptedCentered"
  >
    <span>
      Архів захищено паролем. Для перегляду збережіть архів на комп'ютер.
    </span>
  </div>
</div>
`;

exports[`[UK] archive-preview (no selected file) 1`] = `
<div
  class="tip"
>
  <span>
    Тепер можна переглядати
і добувати окремі файли з архіву
  </span>
</div>
`;
